--- a/estoque_bebidas/Dockerfile
+++ b/estoque_bebidas/Dockerfile
@@ -1,11 +1,10 @@
-# Dockerfile
 FROM python:3.11-slim
 
-WORKDIR /estoque_bebida
+WORKDIR /estoque_bebidas
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["python", "estoque_bebida/manage.py"]
+CMD ["python", "run_waitress.py"]
